[package]
name = "task-driver"
version = "0.1.0"
edition = "2021"

[features]
integration = ["state/mocks", "common/mocks"]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required-features = ["integration"]

[dependencies]
# === Async + Runtime === #
async-trait = "0.1.60"
crossbeam = { workspace = true }
tokio = { workspace = true }

# === Cryptography === #
mpc-stark = { workspace = true }
num-bigint = { workspace = true }

# === Workspace Dependencies === #
circuits = { path = "../circuits" }
circuit-types = { path = "../circuit-types" }
common = { path = "../common" }
external-api = { path = "../external-api" }
gossip-api = { path = "../gossip-api" }
job-types = { path = "../workers/job-types" }
renegade-crypto = { path = "../renegade-crypto" }
starknet-client = { path = "../starknet-client" }
state = { path = "../state" }
system-bus = { path = "../system-bus" }

# === Misc Dependencies === #
itertools = "0.11"
serde = { workspace = true }
starknet = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2"
eyre = { workspace = true }
inventory = "0.3"

lazy_static = "1.4"
num-traits = "0.2"

rand = { workspace = true }
test-helpers = { path = "../test-helpers" }
util = { path = "../util" }

constants = { path = "../constants" }
proof-manager = { path = "../workers/proof-manager", features = ["mocks"] }
