[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
description = "Helpers for setting up and running integration tests for the relayer"

[dependencies]
# === Runtime + Networking === #
async-trait = "0.1"
dns-lookup = "1.0"
futures = "0.3"
tokio = { workspace = true }

# === Node Interaction === #
starknet = { workspace = true }
reqwest = "0.11.13"

# === Cryptography + Arithmetic === #
ark-mpc = { workspace = true }
ark-ec = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }

# === Workspace Dependencies === # 
constants = { path = "../constants" }
renegade-crypto = { path = "../renegade-crypto" }

# === Misc Dependencies === #
itertools = "0.10.5"
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
