[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
description = "Helpers for setting up and running integration tests for the relayer"

[features]
default = ["test-harness"]
arbitrum = [
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
    "dep:arbitrum-client",
    "dep:circuit-types",
    "dep:common",
    "dep:constants",
    "dep:ethers",
    "dep:num-bigint",
    "dep:k256",
    "dep:renegade-crypto",
]
test-harness = ["dep:futures", "dep:tokio"]
mocks = ["dep:common"]
mpc-network = [
    "dep:ark-mpc",
    "dep:async-trait",
    "dep:constants",
    "dep:dns-lookup",
    "dep:futures",
    "dep:renegade-crypto",
    "dep:tokio",
    "dep:util",
]

[dependencies]
# === Runtime + Networking === #
async-trait = { workspace = true, optional = true }
dns-lookup = { version = "1.0", optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# === Cryptography + Arithmetic === #
ark-mpc = { workspace = true, optional = true, default-features = true }
num-bigint = { version = "0.4", features = ["rand"], optional = true }
k256 = { version = "0.13", optional = true }

# === Ethereum Utils === #
alloy-primitives = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
ethers = { workspace = true, optional = true }

# === Workspace Dependencies === # 
arbitrum-client = { path = "../arbitrum-client", optional = true }
circuit-types = { path = "../circuit-types", optional = true }
common = { path = "../common", features = ["mocks"], optional = true }
constants = { path = "../constants", optional = true }
renegade-crypto = { path = "../renegade-crypto", optional = true }
util = { path = "../util", optional = true }

# === Misc Dependencies === #
itertools = "0.10.5"
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
