[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
description = "Helpers for setting up and running integration tests for the relayer"

[features]
default = ["test-harness"]
contracts = ["arbitrum"]
arbitrum = [
    "dep:alloy",
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
    "dep:arbitrum-client",
    "dep:circuit-types",
    "dep:common",
    "dep:constants",
    "dep:num-bigint",
    "dep:k256",
    "dep:renegade-crypto",
]
test-harness = ["dep:futures", "dep:tokio"]
mocks = ["dep:common"]
mpc-network = [
    "dep:ark-mpc",
    "dep:async-trait",
    "dep:constants",
    "dep:dns-lookup",
    "dep:futures",
    "dep:renegade-crypto",
    "dep:tokio",
    "dep:util",
]

[dependencies]
# === Runtime + Networking === #
async-trait = { workspace = true, optional = true }
dns-lookup = { version = "1.0", optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# === Cryptography + Arithmetic === #
ark-mpc = { workspace = true, optional = true, default-features = true }
num-bigint = { version = "0.4", features = ["rand"], optional = true }
k256 = { version = "0.13", optional = true }

# === Ethereum Utils === #
alloy = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }

# === Workspace Dependencies === # 
arbitrum-client = { workspace = true, optional = true }
circuit-types = { workspace = true, optional = true }
common = { workspace = true, features = ["mocks"], optional = true }
constants = { workspace = true, optional = true }
renegade-crypto = { workspace = true, optional = true }
util = { workspace = true, optional = true }

# === Misc Dependencies === #
itertools = "0.10.5"
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
