[package]
name = "constants"
version = "0.1.0"
edition = "2024"

[features]
default = ["mpc-types"]
scalar = ["dep:ark-mpc", "ark-mpc/scalar"]
mpc-types = ["ark-mpc/types", "scalar"]

[dependencies]
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-mpc = { workspace = true, optional = true }
ark-ec = "0.4"
