[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[features]
default = ["fields"]
inline = []
elgamal = ["dep:ark-mpc", "dep:rand", "fields", "constants/scalar", "inline"]
fields = ["constants/scalar"]
hash = ["constants/scalar"]

[[bench]]
name = "elgamal"
harness = false
required-features = ["elgamal"]

[[bench]]
name = "poseidon"
harness = false
required-features = ["hash"]

[dependencies]
# === Cryptography + Arithmetic === #
ark-ec = "0.4"
ark-ff = "0.4"
ark-mpc = { workspace = true, optional = true, features = ["scalar"] }
bigdecimal = "0.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }

# === Workspace Dependencies === #
constants = { workspace = true }

# === Misc Dependencies === #
alloy-primitives = { workspace = true }
itertools = "0.10"
lazy_static = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
rand = { workspace = true }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git" }
